# cdr_client_examples

./: GetNGMDB_Maps.ipynb  README.md
sample_cdr_doc_subscriber/: README.md  pyproject.toml
sample_cdr_doc_subscriber/sample_cdr_doc_subscriber/: server.py
sample_cdr_georef/: README.md  pyproject.toml
sample_cdr_georef/sample_cdr_georef/: server.py
sample_cdr_prospectivity_modeling/: README.md  pyproject.toml
sample_cdr_prospectivity_modeling/sample_cdr_prospectivity_modeling/: common.py  script.py  server.py
